--- a/ufo_scraper/Cargo.toml
+++ b/ufo_scraper/Cargo.toml
@@ -9,3 +9,9 @@ edition = "2021"
 reqwest = {version = "0.11", features = ["blocking"]}
 scraper = "0.17.1"
 table-extract = "0.2.3"
+mongodb = "2.1"
+tokio = "1"
+bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
+chrono = "0.4" # Used for setting DateTimes
+serde = {version = "1", features = ["derive"]}
+serde_json = "1" # Used in the Map Data into Structs section
