--- a/ufo_scraper/Cargo.toml
+++ b/ufo_scraper/Cargo.toml
@@ -15,3 +15,4 @@ bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono da
 chrono = "0.4" # Used for setting DateTimes
 serde = {version = "1", features = ["derive"]}
 serde_json = "1" # Used in the Map Data into Structs section
+async-std = "1"
