--- a/ufo_scraper/Cargo.toml
+++ b/ufo_scraper/Cargo.toml
@@ -13,6 +13,7 @@ mongodb = "2.1"
 tokio = "1"
 bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
 chrono = "0.4" # Used for setting DateTimes
+chronoutil = "0.2.5"
 serde = {version = "1", features = ["derive"]}
 serde_json = "1" # Used in the Map Data into Structs section
 async-std = "1"
