--- a/ufo_scraper/Cargo.toml
+++ b/ufo_scraper/Cargo.toml
@@ -17,3 +17,4 @@ chronoutil = "0.2.5"
 serde = {version = "1", features = ["derive"]}
 serde_json = "1" # Used in the Map Data into Structs section
 async-std = "1"
+rand = "0.8.5"
