--- a/ufo_geocoder/Cargo.toml
+++ b/ufo_geocoder/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = {version = "0.11", features = ["blocking"]}
+reqwest = {version = "0.11", features = ["blocking", "json"]}
 scraper = "0.17.1"
 table-extract = "0.2.3"
 mongodb = "2.1"
