--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-/ufo_scraper/target
-/ufo_scraper/.idea
+/rust/ufo_scraper/target
+/rust/ufo_scraper/.idea
+/rust/ufo_geocoder/target
+/rust/ufo_geocoder/.idea
+/rust/ufo_sighting_formatter/target
+/rust/ufo_sighting_formatter/.idea
 /ufo_frontend/ufo-map/node_modules
-/ufo_geocoder/target
-/ufo_geocoder/.idea
-/ufo_sighting_formatter/target
-/ufo_sighting_formatter/.idea
