--- a/ufo_frontend/ufo-map/package.json
+++ b/ufo_frontend/ufo-map/package.json
@@ -13,11 +13,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mdi/font": "^7.3.67",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
     "leaflet": "^1.9.4",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vuetify": "^3.3.22",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
@@ -37,6 +40,7 @@
     "prettier": "^3.0.0",
     "typescript": "~5.1.6",
     "vite": "^4.4.9",
+    "vite-plugin-vuetify": "^1.0.2",
     "vitest": "^0.34.2",
     "vue-tsc": "^1.8.8"
   }
