--- a/ufo_frontend/ufo-map/package.json
+++ b/ufo_frontend/ufo-map/package.json
@@ -26,6 +26,7 @@
     "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node18": "^18.2.0",
     "@types/jsdom": "^21.1.1",
+    "@types/leaflet": "^1.9.7",
     "@types/node": "^18.17.5",
     "@vitejs/plugin-vue": "^4.3.1",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
