--- a/ufo_backend/Dockerfile
+++ b/ufo_backend/Dockerfile
@@ -1,14 +1,14 @@
-FROM golang:1.21.3-alpine AS build
-ENV MONGODB_UFO_URI="mongodb://rust-scraper:iwanttobelieve@127.0.0.1:27017/i_want_to_believe?retryWrites=true&w=majority"
+FROM golang:1.21.4-alpine AS build
+
 WORKDIR /app
 COPY . .
 
 RUN go mod download
 RUN go build -o /app/ufobackend
-
 FROM alpine:latest
-
+EXPOSE 8080
+ENV localhost "0.0.0.0"
 WORKDIR /app
 COPY --from=build /app/ufobackend .
-
+ENV MONGODB_UFO_URI mongodb://rust-scraper:iwanttobelieve@172.17.0.1:27017/i_want_to_believe?retryWrites=true&w=majority&authSource=admin
 CMD ["./ufobackend"]
