--- a/ufo_frontend/ufo-map/package.json
+++ b/ufo_frontend/ufo-map/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@mdi/font": "^7.3.67",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "@vue/runtime-core": "^3.4.21",
     "core-js": "^3.8.3",
     "leaflet": "^1.9.4",
     "pinia": "^2.1.6",
