--- a/rust/ufo_sighting_formatter/Cargo.toml
+++ b/rust/ufo_sighting_formatter/Cargo.toml
@@ -15,6 +15,6 @@ bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono da
 chrono = "0.4" # Used for setting DateTimes
 chronoutil = "0.2.5"
 serde = {version = "1", features = ["derive"]}
-serde_json = "1" # Used in the Map Data into Structs section
+serde_json = "1" # Used in the SightingMap Data into Structs section
 async-std = "1"
 rand = "0.8.5"
