fixed url for flask microservice

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - MONGODB_UFO_URI=mongodb://rust-scraper:iwanttobelieve@172.17.0.1:27017/i_want_to_believe?retryWrites=true&w=majority&authSource=admin
       - localhost=0.0.0.0
-      - MACHINE_LEARNING_URI=http://flaskmachine:5000
+      - MACHINE_LEARNING_URI=http://modelrunner:5000
   ufomap:
     container_name: ufo_map
     build: '../ufo_frontend/ufo-map'
