--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,6 +20,8 @@ services:
         ipv4_address: 172.20.0.3
     ports:
       - "5173:5173"
+    environment:
+      - VITE_BACKEND_URL=http://localhost:8080
   modelrunner:
     container_name: model_runner
     build: '../model_runner'
