--- a/k8s/ufomap.yaml
+++ b/k8s/ufomap.yaml
@@ -18,6 +18,9 @@ spec:
           image: localhost:5001/ufomap:latest
           ports:
             - containerPort: 5173
+          env:
+            - name: VITE_API_URL
+              value: "http://ufobackend:8080"
 ---
 apiVersion: v1
 kind: Service
